--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,3 +49,11 @@ jobs:
                 context: app/backend/.
                 push: true
                 tags: ${{ env.DOCKERHUB }}/bijaypachhai/express-backend:${{ env.SHA_SHORT }}
+
+    deploy:
+      runs-on: ubuntu-latest
+      needs: build-and-push-image
+      steps:
+        - name: Deploy
+          run: |
+            ssh -A -tt -i privatekey.pem -o StrictHostKeyChecking=no -p 22 <serveruser>@<serverIP> "cd app/ && bash deploy.sh"
