--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,13 +19,14 @@ jobs:
             - name: Detect changes
               id: detect-changes
               run: |
-                echo "::set-output name=FRONTEND_CHANGES::$(git diff --numstat HEAD~1 | grep -c '^.*app/frontend/')"
+                echo "FRONTEND_CHANGES=$(git diff --numstat HEAD~1 | grep -c '^.*app/frontend/')" >> $GITHUB_OUTPUT
                 echo "::set-output name=BACKEND_CHANGES::$(git diff --numstat HEAD~1 | grep -c '^.*app/backend/')"
 
             - name: Get Commit SHA
               shell: bash
               run: |
                 echo "SHA_SHORT=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+                echo "This is changes: $GITHUB_OUTPUT"
 
             - name: Login to DockerHub
               uses: docker/login-action@v2
