--- a/.github/workflows/frontend-workflow.yml
+++ b/.github/workflows/frontend-workflow.yml
@@ -4,6 +4,8 @@ on:
     push:
         branches:
             - main
+        paths:
+            - app/frontend/**
             
 
 jobs:
@@ -16,17 +18,10 @@ jobs:
               with:
                 fetch-depth: 2
 
-            - name: Detect changes
-              id: detect-changes
-              run: |
-                echo "FRONTEND_CHANGES=$(git diff --numstat HEAD~1 | grep -c '^.*app/frontend/')" >> $GITHUB_OUTPUT
-                echo "::set-output name=BACKEND_CHANGES::$(git diff --numstat HEAD~1 | grep -c '^.*app/backend/')"
-
             - name: Get Commit SHA
               shell: bash
               run: |
                 echo "SHA_SHORT=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
-                echo "This is changes: $GITHUB_OUTPUT"
 
             - name: Login to DockerHub
               uses: docker/login-action@v2
@@ -36,20 +31,11 @@ jobs:
             
             - name: Build and push to DockerHub
               uses: docker/build-push-action@v6
-              if: steps.detect-changes.outcome.FRONTEND_CHANGES != '0'
               with:
                 context: app/frontend/.
                 push: true
                 tags: bijaydockerhub/react-express-app:front-${{ env.SHA_SHORT }}
                 # tags: ${{ env.DOCKERHUB }}/bijaypachhai/react-frontend:${{ github.sha::5 }}
-
-            - name: Build and push to DockerHub
-              uses: docker/build-push-action@v6
-              if: steps.detect-changes.outcome.BACKEND_CHANGES != '0'
-              with:
-                context: app/backend/.
-                push: true
-                tags: bijaydockerhub/react-express-app:back-${{ env.SHA_SHORT }}
 
     deploy:
       runs-on: ubuntu-latest
