--- a/.github/workflows/frontend-workflow.yml
+++ b/.github/workflows/frontend-workflow.yml
@@ -35,7 +35,6 @@ jobs:
                 context: app/frontend/.
                 push: true
                 tags: bijaydockerhub/react-express-app:front-${{ env.SHA_SHORT }}
-                # tags: ${{ env.DOCKERHUB }}/bijaypachhai/react-frontend:${{ github.sha::5 }}
 
     deploy:
       runs-on: ubuntu-latest
@@ -44,4 +43,4 @@ jobs:
         - name: Deploy
           run: |
             echo "Successfully deployed"
-            # ssh -A -tt -i privatekey.pem -o StrictHostKeyChecking=no -p 22 <serveruser>@<serverIP> "cd app/ && bash deploy.sh"
+            ssh -A -tt -i ${{ secrets.SERVER_KEY }} -o StrictHostKeyChecking=no -p 22 adminuser@${{ secrets.SERVER_ADDRESS }} "cd app/ && bash deploy.sh --frontend --frontend-tag ${{ env.SHA_SHORT }}"
