--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -40,6 +40,11 @@ jobs:
       runs-on: ubuntu-latest
       needs: build-and-push-image
       steps:
+        - name: Get Commit SHA
+          shell: bash
+          run: |
+            echo "SHA_SHORT=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+            
         - name: Deploy
           env:
             SSH_PRIVATE_KEY: ${{ secrets.SERVER_KEY }}
