--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -1,4 +1,4 @@
-name: Build, push Docker image and deploy
+name: backend-workflow
 
 on:
     push:
@@ -6,6 +6,9 @@ on:
             - main
         paths:
             - app/backend/**
+
+env:
+    SHA_SHORT: "${GITHUB_SHA::7}"
             
 
 jobs:
@@ -18,11 +21,6 @@ jobs:
               with:
                 fetch-depth: 2
 
-            - name: Get Commit SHA
-              shell: bash
-              run: |
-                echo "SHA_SHORT=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
-
             - name: Login to DockerHub
               uses: docker/login-action@v2
               with:
@@ -32,19 +30,14 @@ jobs:
             - name: Build and push to DockerHub
               uses: docker/build-push-action@v6
               with:
-                context: app/frontend/.
+                context: app/backend/.
                 push: true
                 tags: bijaydockerhub/react-express-app:backend-${{ env.SHA_SHORT }}
 
     deploy:
       runs-on: ubuntu-latest
       needs: build-and-push-image
-      steps:
-        - name: Get Commit SHA
-          shell: bash
-          run: |
-            echo "SHA_SHORT=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
-            
+      steps:    
         - name: Deploy
           env:
             SSH_PRIVATE_KEY: ${{ secrets.SERVER_KEY }}
