--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -8,7 +8,7 @@ on:
             - app/backend/**
 
 env:
-    SHA_SHORT: ${{GITHUB_SHA::7}}
+    SHA_SHORT: ${{ github.sha::7 }}
             
 
 jobs:
