--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -32,7 +32,7 @@ jobs:
               with:
                 context: app/backend/.
                 push: true
-                tags: bijaydockerhub/react-express-app:backend-${{ env.SHA_SHORT }}
+                tags: bijaydockerhub/react-express-app:backend-$SHA_SHORT
 
     deploy:
       runs-on: ubuntu-latest
@@ -47,4 +47,4 @@ jobs:
             chmod 600 ~/.ssh/id_rsa
             echo "Successfully deployed"
             echo "SHA short: ${{env.SHA_SHORT}}"
-            ssh -A -tt -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p 22 adminuser@${{ secrets.SERVER_ADDRESS }} "cd app/ && bash deploy.sh --backend --backend-tag ${{ env.SHA_SHORT }}"
+            ssh -A -tt -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p 22 adminuser@${{ secrets.SERVER_ADDRESS }} "cd app/ && bash deploy.sh --backend --backend-tag $SHA_SHORT"
