--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -17,6 +17,19 @@ jobs:
               with:
                 fetch-depth: 2
 
+            - name: Get Commit SHA
+              shell: bash
+              run: |
+                echo "SHA_SHORT=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+                echo "$(git rev-parse --short "$GITHUB_SHA")" > commit_sha.txt
+                cat commit_sha.txt
+
+            - name: upload artifact
+              uses: actions/upload-artifact@v2
+              with:
+                name: commit-artifact
+                path: commit_sha.txt
+
             - name: Login to DockerHub
               uses: docker/login-action@v2
               with:
@@ -29,17 +42,16 @@ jobs:
                 context: app/backend/.
                 push: true
                 tags: bijaydockerhub/react-express-app:backend-${GITHUB_SHA::7}
-            
-            - name: Artifact commit sha
-              run: |
-                echo "This: ${GITHUB_SHA::7}"
-                echo "${GITHUB_SHA::7}" > commit_sha.txt
-                cat commit_sha.txt
 
     deploy:
       runs-on: ubuntu-latest
       needs: build-and-push-image
       steps:    
+        - name: Download artifact
+          uses: actions/download-artifact@v2
+          with:
+            name: commit-artifact
+
         - name: Deploy
           env:
             SSH_PRIVATE_KEY: ${{ secrets.SERVER_KEY }}
@@ -48,5 +60,6 @@ jobs:
             echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
             chmod 600 ~/.ssh/id_rsa
             echo "Successfully deployed"
-            echo "SHA short: ${{env.SHA_SHORT}}"
+            echo "SHA_SHORT=$(cat commit_sha.txt)" >> "$GITHUB_ENV"
+            echo "SHA short: $(cat commit_sha.txt)"
             ssh -A -tt -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p 22 adminuser@${{ secrets.SERVER_ADDRESS }} "cd app/ && bash deploy.sh --backend --backend-tag $SHA_SHORT"
