--- a/.github/workflows/frontend-workflow.yml
+++ b/.github/workflows/frontend-workflow.yml
@@ -1,4 +1,4 @@
-name: Build, push Docker image and deploy
+name: frontend-workflow
 
 on:
     push:
@@ -22,6 +22,14 @@ jobs:
               shell: bash
               run: |
                 echo "SHA_SHORT=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+                echo "$(git rev-parse --short "$GITHUB_SHA")" > commit_sha.txt
+                cat commit_sha.txt
+
+            - name: upload artifact
+              uses: actions/upload-artifact@v4.6.2
+              with:
+                name: commit-artifact
+                path: commit_sha.txt
 
             - name: Login to DockerHub
               uses: docker/login-action@v2
@@ -40,10 +48,10 @@ jobs:
       runs-on: ubuntu-latest
       needs: build-and-push-image
       steps:
-        - name: Get Commit SHA
-          shell: bash
-          run: |
-            echo "SHA_SHORT=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+        - name: Download artifact
+          uses: actions/download-artifact@v4.2.1
+          with:
+            name: commit-artifact
             
         - name: Deploy
           env:
@@ -52,5 +60,6 @@ jobs:
             mkdir -p ~/.ssh
             echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
             chmod 600 ~/.ssh/id_rsa
+            echo "SHA short: $(cat commit_sha.txt)"
+            ssh -A -tt -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p 22 adminuser@${{ secrets.SERVER_ADDRESS }} "cd app/ && bash deploy.sh --frontend --frontend-tag $(cat commit_sha.txt)"
             echo "Successfully deployed"
-            ssh -A -tt -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p 22 adminuser@${{ secrets.SERVER_ADDRESS }} "cd app/ && bash deploy.sh --frontend --frontend-tag ${{ env.SHA_SHORT }}"
